--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
+
+:root {
+  --shadow-color: #000000;
+  --primary-color: #A45D5D;
+  --secondary-color: #EFEFEF;
+  --light-color: #FFFFFF;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Schoolbell', cursive;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  background-color: var(--secondary-color);
+}
+
+a {
+  text-decoration: none;
+  color: var(--light-color);
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.btn {
+  padding: 10px 40px;
+
+  border-radius: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.btn--primary {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.btn--secondary {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
