--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,8 @@
 
     background-color: var(--primary-color);
     color: var(--light-color);
+
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .header__logo {
