--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,10 @@ a {
 .btn {
   padding: 10px 40px;
 
-  border-radius: 16px;
+  border-radius: 12px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+  text-shadow: none;
 }
 
 .btn--primary {
