--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ main {
   min-height: 100vh;
 }
 
+h2 {
+  font-size: 1.5rem;
+}
+
 a {
   text-decoration: none;
   color: var(--light-color);
@@ -43,7 +47,10 @@ a {
 .btn {
   padding: 10px 40px;
 
+  font-family: 'Schoolbell', cursive;
+
   border-radius: 12px;
+  border: none;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
   text-shadow: none;
@@ -57,4 +64,25 @@ a {
 .btn--secondary {
   background-color: var(--secondary-color);
   color: var(--primary-color);
+}
+
+.btn--medium {
+  font-size: 1.2rem;
+}
+
+input[type=text] {
+  padding: 10px 40px;
+
+  font-family: 'Schoolbell', cursive;
+  font-size: 1.2rem;
+
+  height: 50px;
+  width: 500px;
+
+  background-color: var(--light-color);
+  color: var(--primary-color);
+
+  border-radius: 12px;
+  border: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
