--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,10 @@
 .header {
+    position: sticky;
+    top: 0px;
+    left: 0px;
+
+    z-index: 100;
+
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
