--- a/src/components/LandingPageContent.css
+++ b/src/components/LandingPageContent.css
@@ -24,3 +24,20 @@
 
     gap: 50px;
 }
+
+.landing-content__share-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 80vw;
+
+    font-size: 1.2rem;
+
+    padding: 2.5rem;
+
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 16px;
+}
