--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@ a {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .btn {
   padding: 10px 40px;
 
@@ -74,6 +78,8 @@ a {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
   text-shadow: none;
+
+  cursor: pointer;
 }
 
 .btn--primary {
@@ -81,9 +87,19 @@ a {
   color: var(--light-color);
 }
 
+.btn--primary:hover {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+
 .btn--secondary {
   background-color: var(--secondary-color);
   color: var(--primary-color);
+}
+
+.btn--secondary:hover {
+  background-color: var(--primary-color);
+  color: var(--light-color);
 }
 
 .btn--medium {
