--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,15 @@ input[type=text], input[type=password] {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.splitter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+}
+
 .form {
   display: flex;
   flex-direction: column;
