Implement Back to Home in RegisterPage and LoginPage

--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -10,7 +10,7 @@ main {
     display: flex;
     flex-direction: column;
 
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
     background-color: var(--primary-color);
@@ -22,6 +22,12 @@ main {
     border-radius: 20px;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
+}
+
+.splitter__left a {
+    margin-bottom: 10px;
+
+    font-size: 1.1rem;
 }
 
 .splitter__right {
