--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,25 @@ main {
   min-height: 100vh;
 }
 
+.page-content {
+  font-size: 1.2rem;
+
+  padding: 1rem;
+}
+
+.page-content > p {
+  line-height: 1.5;
+  text-indent: 50px;
+}
+
+.page-content > * {
+  margin-bottom: 2rem;
+}
+
+.page-content > *:last-child {
+  margin-bottom: 0px;
+}
+
 h1 {
   font-weight: 400;
 }
