--- a/src/index.css
+++ b/src/index.css
@@ -49,22 +49,26 @@ main {
   min-height: 100vh;
 }
 
-.page-content {
+.page-main {
+  
+}
+
+.page-main__content {
   font-size: 1.2rem;
 
   padding: 1rem;
 }
 
-.page-content > p {
+.page-main__content > p {
   line-height: 1.5;
   text-indent: 50px;
 }
 
-.page-content > * {
+.page-main__content > * {
   margin-bottom: 2rem;
 }
 
-.page-content > *:last-child {
+.page-main__content > *:last-child {
   margin-bottom: 0px;
 }
 
