Fix Header styling responsivness

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -61,3 +61,86 @@
 .navigation__link-item:last-child {
     margin-right: 0px;
 }
+
+.navigation__button {
+    display: none;
+}
+
+.navigation__vignette {
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .navigation {
+        position: fixed;
+
+        margin: 0px;
+        padding: 1rem;
+        
+        left: 50vw;
+        top: 50vh;
+
+        transform: translate(-50%, -50%);
+
+        z-index: 1000;
+
+        width: 90vw;
+
+        background-color: var(--primary-color);
+
+        border-radius: 16px;
+
+        /* box-shadow: 0px 0px 0px 100vw rgba(0, 0, 0, 0.4); */
+    }
+    
+    .navigation--hidden {
+        display: none;
+    }    
+    
+    .navigation__links {
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        justify-content: center;        
+    }
+
+    .navigation__link-item {
+        margin: 0px;
+        margin-bottom: 40px;
+    }
+
+    .navigation__link-item:last-child {
+        margin: 0px;
+        margin-bottom: 10px;
+    }
+
+    .navigation__button {
+        display: block;
+
+        background-color: transparent;
+        color: white;
+
+        border: none;
+
+        cursor: pointer;
+    }
+
+    .navigation__vignette {
+        display: block;
+
+        position: fixed;
+
+        z-index: 500;
+
+        inset: 0px;
+        width: 100vw;
+        height: 100vh;
+
+        background-color: rgba(0, 0, 0, 0.25);
+    }
+
+    .navigation__vignette--hidden {
+        display: none;
+    }
+}
