--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ input[type=text], input[type=password] {
 
   height: 50px;
   width: 500px;
+  width: min(500px, 100%);
 
   background-color: var(--light-color);
   color: var(--primary-color);
