--- a/src/components/LandingPagePreview.css
+++ b/src/components/LandingPagePreview.css
@@ -78,3 +78,64 @@
 .landing-preview__right:last-child {
     margin-bottom: 72px;
 }
+
+@media (max-width: 900px) {
+    .landing-preview {
+        padding: 100px 2rem;
+        padding-bottom: 0px;
+
+        align-items: flex-end;
+    }
+
+    .landing-preview__right:last-child {
+        margin-bottom: 10px;
+    }
+
+    .landing-preview__board-face {    
+        width: 225px;
+        height: 105px;
+
+        box-shadow: 3px 3px 0px 1px #A35C5C;
+    }
+    
+    .landing-preview__board-hand {    
+        left: 100px;
+    
+        width: 25px;
+        height: 75px;
+
+        box-shadow: 3px 3px 0px 1px #A35C5C;
+    }
+    
+    .landing-preview__board-logo {
+        height: 40px;
+        margin-top: 15px;
+    }
+    
+    .landing-preview__board-text {
+        margin-top: 10px;
+    
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 680px) {
+    .landing-preview {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .landing-preview__board {  
+        left: 0px;
+    }
+
+    .landing-preview__right {
+        align-items: center;
+
+        text-align: center;
+    }
+
+    .landing-preview__right:last-child {
+        margin-bottom: 100px;
+    }
+}
