--- a/src/components/LandingPageContent.css
+++ b/src/components/LandingPageContent.css
@@ -13,7 +13,7 @@
     margin-right: 1rem;
 }
 
-.landing-content__shortener-form:last-child {
+.landing-content__shortener-form > *:last-child {
     margin-right: 0px;
 }
 
@@ -22,7 +22,7 @@
     flex-direction: row;
     justify-content: space-around;
 
-    gap: 50px;
+    gap: 20px;
 }
 
 .landing-content__share-form {
@@ -40,4 +40,49 @@
     background-color: var(--secondary-color);
     color: var(--primary-color);
     border-radius: 16px;
+}
+
+@media(max-width: 700px) {
+    .landing-content__account-form {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media(max-width: 400px) {
+    .landing-content__shortener-form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .landing-content__shortener-form > * {
+        margin-right: 0rem;
+        margin-bottom: 1rem;
+    }
+    
+    .landing-content__shortener-form > *:last-child {
+        margin-right: 0px;
+        margin-bottom: 0px;
+    }
+
+    .landing-content__account-form {
+        align-items: center;
+    }
+
+    .landing-content__account-form .form__group-item {
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+    }
+
+    .landing-content__account-form .form__btn {
+        align-self: center;
+    }
+
+    .landing-content__account-form .form__group-item:last-child .form__item-header {
+        padding: 0px;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+    }
 }
