--- a/src/components/LandingPageContent.css
+++ b/src/components/LandingPageContent.css
@@ -85,4 +85,20 @@
         margin-top: 1rem;
         margin-bottom: 0.5rem;
     }
+
+    .landing-content__share-form {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .landing-content__share-form > * {
+        text-align: center;
+
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .landing-content__share-form > *:last-child {
+        margin-bottom: 0px;
+    }
 }
